--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="javascript" href="javascript/script.js"> </script>
+    <script src="javascript/script.js"> </script>
 <header> 
     <h1> Question 1</h1>
 </header> 
-<div id="layout">
+<section>
+<div id="lay">
     <form>
-        
+        <label for="num1"> Escreva um numero: </label>
+        <input type="text" id="n1"> 
+        <input type="text" id="res">
+        <input type="button" id="calc">
     </form>
 </div>
-
+</section>
 
     
 </body>
