--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 <div id="layer">
     <form id="calc">
         
-        <label for="num1"> Please enter 2 numbers  </label>
+        <h3>Please enter 2 numbers  </h3>  
         <input type="number" id="n1"> 
+        <p>
+            +
+        </p>    
         <input type="number" id="n2">
         <input type="button" id="calc" value="Sum" onclick="sum()">
         <div id="res">  </div>
