--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="layer">
     <form id="calc">
         
-        <h3>Please enter 2 numbers  </h3>  
+        <h3>Please enter 2 numbers   asdfasdfasdf</h3>  
         <input type="number" id="n1"/> 
         
         <label id="add"> + </label>
