--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         <input type="number" id="nmult"/> 
     
         <input type="button" id="calc" value="Sum" onclick="mu()">
-        <div id="resmult">  oi </div>
+        <div id="resmult">  oi <br"> </div>
+        <select name="tabuada" id="resmult2" size="10">
+
+        </select>
+
+   
         
     </form>
 </div>
