--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>Please enter 10 numbers </h3>  
         <input type="number" id="nmult"/> 
     
-        <input type="button" id="calc" value="calc" onclick="mu()">
+        <input type="button" id="calc" value="calc" onclick="test()">
         <br>
         <div id="tab"> Result </div>
 
