--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
 <div id="layer"></div>
     <form id="calc">
         
-        <h3>Please enter 10 numbers </h3>  
+        <h3 id="oi">Please enter 10 numbers </h3>  
         <input type="number" id="nsort"/> 
     
-        <input type="button" id="calc" value="calc" onclick="writeee()">
+        <input type="button" id="calc" value="calc" onclick="test()">
         <br>
         <div id="tab2">  </div>
+        <div id="cont">  </div>
 
        <!--  <select name="numbers" id="ressort" size="10">
 
