--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     
         <input type="button" id="calc" value="calc" onclick="test()">
         <br>
-        <div id="tab2">  </div>
-        <div id="cont">  </div>
+        <div id="tab2"> a </div>
+        <div id="cont"> b </div>
 
        <!--  <select name="numbers" id="ressort" size="10">
 
